--- a/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
+++ b/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -22,38 +22,38 @@
     <ProjectGuid>{BB7E0A70-0FD4-48E8-86D1-710894593327}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>KeyboardShortcutsFix</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\HJWasm.props" />
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\uasm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -111,6 +111,10 @@
       <PreprocessorDefinitions>_WIN64</PreprocessorDefinitions>
       <OutputFormat>2</OutputFormat>
     </HJWASM>
+    <UASM>
+      <PreprocessorDefinitions>_WIN64</PreprocessorDefinitions>
+      <OutputFormat>2</OutputFormat>
+    </UASM>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -139,6 +143,8 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;KEYBOARDSHORTCUTSFIX_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <DebugInformationFormat>None</DebugInformationFormat>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>skse64_src;skse64_src\skse64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -150,6 +156,10 @@
       <PreprocessorDefinitions>_WIN64</PreprocessorDefinitions>
       <OutputFormat>2</OutputFormat>
     </HJWASM>
+    <UASM>
+      <PreprocessorDefinitions>_WIN64</PreprocessorDefinitions>
+      <OutputFormat>2</OutputFormat>
+    </UASM>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="NOTES.txt" />
@@ -183,15 +193,15 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <HJWASM Include="Misc.asm">
+    <UASM Include="Misc.asm">
       <FileType>Document</FileType>
-    </HJWASM>
+    </UASM>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="KeyboardShortcutsFix.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="$(VCTargetsPath)\BuildCustomizations\HJWasm.targets" />
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\uasm.targets" />
   </ImportGroup>
 </Project>
