--- a/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
+++ b/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
@@ -144,7 +144,7 @@
       <SDLCheck>true</SDLCheck>
       <DebugInformationFormat>None</DebugInformationFormat>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>R:\Projects\ThirdParty\skse64_src;R:\Projects\ThirdParty\skse64_src\skse64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>\skse64_src;\skse64_src\skse64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
