SKSE64 AE support
SKSE64 pre-AE still compatible

--- a/x64/Release/KeyboardShortcutsFix.ini
+++ b/x64/Release/KeyboardShortcutsFix.ini
@@ -1,10 +1,12 @@
 [General]
-iEnableLogging=1
-; 0 = Disabled.
-; 1 = Enabled.
-iIgnoreExpectedProcessName=0
-; 0 = Expected process name detection enabled.
-; 1 = Ignore SkyrimSE.exe name detection. Allows mod to work regardless of EXE name.
+bEnableLogging=1
+; 0 = Disabled
+; 1 = Enabled
+
+bIgnoreExpectedProcessName=0
+; false = Expected process name detection enabled.
+; true = Ignore SkyrimSE.exe name detection. Allows mod to work regardless of EXE name.
+
 iPatchMethod=1
 ; 1 = hwnd method.
 ; 2 = dwFlags method.
