--- a/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj.filters
+++ b/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj.filters
@@ -43,16 +43,16 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Misc.asm">
-      <Filter>Source Files\ASM</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Text Include="NOTES.txt" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="KeyboardShortcutsFix.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <UASM Include="Misc.asm">
+      <Filter>Source Files</Filter>
+    </UASM>
   </ItemGroup>
 </Project>
