Fixed keyboard keys being processed off-screen (such as alt-tabbing)
- Removed iPatchMethod

A very big thanks to LePhilanthrope @ NexusMods for finding the issue (my patch was incorrect)!

--- a/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
+++ b/KeyboardShortcutsFix/KeyboardShortcutsFix.vcxproj
@@ -193,7 +193,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <UASM Include="Misc.asm">
+    <UASM Include="Utils.asm">
       <FileType>Document</FileType>
     </UASM>
   </ItemGroup>
