--- a/x64/Release/KeyboardShortcutsFix.ini
+++ b/x64/Release/KeyboardShortcutsFix.ini
@@ -4,9 +4,5 @@ bEnableLogging=1
 ; 1 = Enabled
 
 bIgnoreExpectedProcessName=0
-; false = Expected process name detection enabled.
-; true = Ignore SkyrimSE.exe name detection. Allows mod to work regardless of EXE name.
-
-iPatchMethod=1
-; 1 = hwnd method.
-; 2 = dwFlags method.
+; false = Expected process name detection enabled
+; true = Ignore SkyrimSE.exe name detection. Allows mod to work regardless of EXE name
